<resources>
    <string name="app_name">SUGAR</string>
    <string name="finish">Fertig</string>
    <string name="cancel">Abbrechen</string>
    <string name="on_cancel">Vorgang abgebrochen</string>
    <string name="contacts_on_cancel">Kontakte wurden nicht aktualisiert</string>
    <string name="prompt_select_contacts">Kontakte auswählen</string>
    <string name="read_contacts_failed">Kontakte konnten nicht gelesen werden</string>
    <string name="calls_allowed">Anrufe sind jetzt erlaubt</string>
    <string name="calls_forbidden">Anrufe sind jetzt verboten</string>
    <string name="title_activity_display_profile">DisplayProfileActivity</string>
    <string name="callService">Dieser Dienst stellt sicher,dass deine geblockten Anrufe auch geblockt werden.</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="monday_short">MO</string>
    <string name="tuesday_short">DI</string>
    <string name="wednesday_short">MI</string>
    <string name="thursday_short">DO</string>
    <string name="friday_short">FR</string>
    <string name="saturday_short">SA</string>
    <string name="sunday_short">SO</string>
    <string name="back">Zurück</string>
    <string name="choosecontacts">Kontakte wählen</string>
    <string name="block_calls">Anrufe blockieren:</string>
    <string name="from_to">Von %1$s bis %2$s</string>
    <string name="from_plus_time">Von\n%s</string>
    <string name="to_plus_time">Bis\n%s</string>
    <string name="not_at_all">Gar nicht</string>
    <string name="error">Ein Fehler ist aufgetreten</string>
    <string name="profile_inactive">Profil inaktiv</string>
    <string name="all">Alle</string>
    <string name="greetings">Herzlich willkommen!\nWas möchten Sie tun?</string>
    <string name="greetings2">Was möchten Sie tun?</string>
    <string name="greetings_edit">Profile anzeigen</string>
    <string name="greetings_disturb">Ungestört arbeiten</string>
    <string name="greetings_closingtime">Feierabend</string>
    <string name="closing_time_announcement">Wann möchten Sie an den Feierabend erinnert werden?</string>
    <string name="closing_time_announcement_lf">Wann möchten Sie\nan den Feierabend\nerinnert werden?</string>
    <string name="test_time">17:45</string>
    <string name="start">Starten</string>
    <string name="prompt_do_not_disturb">Wie lange möchten Sie nicht erreichbar sein?</string>
    <string name="time_remaining">Verbleibende Zeit:</string>
    <string name="remove">Entfernen</string>
    <string name="closing_time_title">Feierabend!</string>
    <string name="closing_time_text">Mach mal Pause</string>
    <string name="prompt_edit_profile">Wann möchten Sie nicht erreichbar sein?</string>
    <string name="save_and_close">Speichern und schließen</string>
    <string name="profile_saved">Profil gespeichert</string>
    <string name="profile_not_saved">Profile konnte nicht gespeichert werden</string>
    <string name="choose_mode">Modus wählen</string>
    <string name="reject_message">Wir haben dem angerufenen Gesprächsteilnehmer eine Pause eingeräumt. Liebe Grüße,
    das SUGAR Team.</string>
    <string name="create_profile">Profil anlegen</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="add_profile_description">Profil erstellen</string>
    <string name="remove_profile_description">Profil löschen</string>
    <string name="stop">Stop</string>
    <string name="enter_profile_name">Profilname&#8230;</string>
    <string name="prompt_enter_profile_name">Bitte geben Sie einen Profilnamen ein.</string>
    <string name="download_profile_description">Profile herunterladen</string>
    <string name="permissions_granted">Berechtigungen genehmigt</string>
    <string name="permissions_not_granted">Berechtigungen nicht genehmigt</string>
    <string name="non_valid_entry">Ungültige Eingabe</string>
    <string name="notification_service">NotificationListener</string>
    <string name="error_message_contacts_permission">Die SUGAR-App hat nicht die Berechtigung, auf die Kontakte zuzugreifen.</string>
</resources>
