<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.peter.sugar.ClosingTimeDisplayActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@mipmap/sleepyworker"/>
    <TextView
        android:id="@+id/label_closing_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/horizontalMargin"
        android:layout_marginRight="@dimen/horizontalMargin"
        android:textAlignment="center"
        android:text="@string/closing_time_announcement_lf"
        android:textSize="@dimen/text_medium"/>



    <TableLayout
        android:id="@+id/closing_times_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/horizontalMarginClosingTimes"
        android:layout_marginLeft="@dimen/horizontalMarginClosingTimes"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/monday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/tuesday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/wednesday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/thursday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/friday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/saturday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/table_padding_large"
                android:paddingRight="@dimen/table_padding_large"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:text="@string/sunday"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/table_padding"
                android:paddingBottom="@dimen/table_padding"
                android:background="@drawable/weekday_background"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"/>
        </TableRow>
    </TableLayout>

</LinearLayout>